# kedro-prod-ready-ds-pipelines-aug2025

./: README.md
solutions/solution/: README.md  pyproject.toml
solutions/solution/src/solution/: __init__.py  __main__.py  settings.py
workshop/kedro-workshop/: README.md  pyproject.toml
workshop/kedro-workshop/notebooks/: full_project.ipynb
workshop/kedro-workshop/src/kedro_workshop/: __init__.py  __main__.py  settings.py
workshop/kedro-workshop/src/kedro_workshop/pipelines/data_science/: nodes.py  pipeline.py
