[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "kedro_workshop"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
kedro-workshop = "kedro_workshop.__main__:main"

[tool.kedro]
package_name = "kedro_workshop"
project_name = "kedro workshop"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kedro_workshop.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
